--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -11,22 +8,42 @@ on:
 
 jobs:
   build:
-
-    runs-on: self-hosted
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+
+    - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20.x'
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: pm2 restart apiserver 
-    
+
+    - name: Install Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: 1.4.6
+
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Apply
+      id: terraform
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        terraform apply -auto-approve
+        echo "PRIVATE_KEY=$(terraform output -raw private_key_pem)" >> $GITHUB_ENV
+        echo "PUBLIC_IP=$(terraform output -raw public_ip)" >> $GITHUB_ENV
+
+    - name: Deploy Application
+      env:
+        PRIVATE_KEY: ${{ env.PRIVATE_KEY }}
+        PUBLIC_IP: ${{ env.PUBLIC_IP }}
+      run: |
+        echo "$PRIVATE_KEY" > private_key.pem
+        chmod 600 private_key.pem
+        ssh -o "StrictHostKeyChecking=no" -i private_key.pem ubuntu@$PUBLIC_IP << EOF
+          sudo docker run -d -p 9000:9000 medusajs/medusa
+        EOF
