--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -44,6 +45,6 @@ jobs:
       run: |
         echo "$PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
-        ssh -o "StrictHostKeyChecking=no" -i private_key.pem ubuntu@$PUBLIC_IP << EOF
+        ssh -o "StrictHostKeyChecking=no" -i private_key.pem ubuntu@$PUBLIC_IP << 'EOF'
           sudo docker run -d -p 9000:9000 medusajs/medusa
         EOF
