--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,23 +25,6 @@ jobs:
       with:
         terraform_version: 1.4.6
 
-    - name: Remove Existing Key Pair
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        # Ensure aws-cli is installed
-        sudo apt-get install -y awscli
-
-        # Check if key pair exists and delete if so
-        existing_key=$(aws ec2 describe-key-pairs --key-name my-key-pair --query "KeyPairs[0].KeyName" --output text || echo "")
-        if [ "$existing_key" == "my-key-pair" ]; then
-          aws ec2 delete-key-pair --key-name my-key-pair
-          echo "Deleted existing key pair"
-        else
-          echo "Key pair does not exist, skipping deletion"
-        fi
-
     - name: Terraform Init
       run: terraform init
 
@@ -52,23 +35,20 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
         terraform apply -auto-approve
-        echo "PRIVATE_KEY=$(terraform output -raw private_key_pem)" >> $GITHUB_ENV
         echo "PUBLIC_IP=$(terraform output -raw public_ip)" >> $GITHUB_ENV
 
     - name: Deploy Application
       env:
-        PRIVATE_KEY: ${{ env.PRIVATE_KEY }}
         PUBLIC_IP: ${{ env.PUBLIC_IP }}
       run: |
         echo "Deploying to $PUBLIC_IP"
-        echo "$PRIVATE_KEY" > private_key.pem
-        chmod 600 private_key.pem
 
         # Test SSH connection
-        ssh -o "StrictHostKeyChecking=no" -i private_key.pem ubuntu@$PUBLIC_IP 'echo "SSH connection successful"'
+        # Note: Ensure you have a valid SSH key in your local environment or that the instance has appropriate access
+        ssh -o "StrictHostKeyChecking=no" ubuntu@$PUBLIC_IP 'echo "SSH connection successful"'
         
         # Deploy application
-        ssh -o "StrictHostKeyChecking=no" -i private_key.pem ubuntu@$PUBLIC_IP << 'EOF'
+        ssh -o "StrictHostKeyChecking=no" ubuntu@$PUBLIC_IP << 'EOF'
           echo "Deploying Medusa application"
           sudo docker run -d -p 9000:9000 medusajs/medusa
         EOF
