--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,13 +35,13 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
         terraform apply -auto-approve
-        # Export output to environment variable
         echo "PUBLIC_IP=$(terraform output -raw public_ip)" >> $GITHUB_ENV
-        # Debug the environment variable
-        echo "PUBLIC_IP=$(terraform output -raw public_ip)"
 
-    - name: Debug Environment Variable
-      run: echo "PUBLIC_IP is $PUBLIC_IP"
+    - name: Debug Environment Variables
+      run: |
+        echo "PUBLIC_IP is $PUBLIC_IP"
+        cat $GITHUB_ENV
+        echo "Debug complete"
 
     - name: Deploy Application
       env:
